# secret-envelope

./: README.md  SECURITY.md  pyproject.toml
envelope/: __init__.py  exceptions.py  format.py  validate.py
tests/: test_envelope.py
